# biqt-contact-detector

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  descriptor.json  requirements-cpu.txt  requirements.txt
include/: BIQTContactDetector.h  ContactDetector.h  pybind11_handler.h
src/cxx/: BIQTContactDetector.cpp  ContactDetector.cpp  pybind11_handler.cpp
src/python/inference/: ContactClassifierNetwork.py  DualContactClassifierNetwork.py  dataset_utils.py  detection_network.py  main.py  net.py  no_op_network.py  pytorch_detector.py
src/python/inference/cv_features/: tf_features.py
src/python/inference/cv_features/features/: convert_mat_struct.py  extract_features.py  radialProfile.py
src/python/inference/cv_features/features/models/bsif_filters/: README.txt
src/python/training/: Dockerfile  README.md  docker-compose.yml.example  misc.py  networks.py  requirements.txt  stats.py  train.py
src/python/training/datasets/: generic.py
src/python/training/metadata/: train_cosmetic_example.csv  train_softlens_example.csv  validation_cosmetic_example.csv  validation_softlens_example.csv
src/python/training/train_scripts/: train_cosmetic.sh.example  train_softlens.sh.example
